--- a/_layouts/post.njk
+++ b/_layouts/post.njk
@@ -10,6 +10,23 @@
     <body>
         <div class="container">
             {{ content | safe }}
+
+            <script src="https://giscus.app/client.js"
+                data-repo="enbyautumn/blog"
+                data-repo-id="R_kgDOG56USg"
+                data-category="Announcements"
+                data-category-id="DIC_kwDOG56USs4CBUvM"
+                data-mapping="pathname"
+                data-reactions-enabled="1"
+                data-emit-metadata="0"
+                data-input-position="top"
+                data-theme="dark"
+                data-lang="en"
+                crossorigin="anonymous"
+                async>
+            </script>
+
+
         </div>
     </body>
 </html>
