--- a/_layouts/post.njk
+++ b/_layouts/post.njk
@@ -1,32 +1,15 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>{{ title }}</title>
         <link rel="stylesheet" href="/css/main.css"></link>
-        {# <link href="https://cdn.jsdelivr.net/gh/PrismJS/prism-themes@1.9.0/themes/prism-one-dark.css" rel="stylesheet"> #}
     </head>
     <body>
         <div class="container">
             {{ content | safe }}
-
-            <script src="https://giscus.app/client.js"
-                data-repo="enbyautumn/blog"
-                data-repo-id="R_kgDOG56USg"
-                data-category="Announcements"
-                data-category-id="DIC_kwDOG56USs4CBUvM"
-                data-mapping="pathname"
-                data-reactions-enabled="1"
-                data-emit-metadata="0"
-                data-input-position="top"
-                data-theme="dark"
-                data-lang="en"
-                crossorigin="anonymous"
-                async>
-            </script>
-
-
+            {% include "darktoggle.njk" %}
         </div>
     </body>
 </html>
