remove dark mode toggle because it made the css suck

--- a/_layouts/post.njk
+++ b/_layouts/post.njk
@@ -9,7 +9,7 @@
     <body>
         <div class="container">
             {{ content | safe }}
-            {% include "darktoggle.njk" %}
+            {# {% include "darktoggle.njk" %} #}
         </div>
     </body>
 </html>
